# moire-flow

./: .gitignore  ANALYSIS.md  ARCHITECTURE.md  README.md  VALIDATION.md  pyproject.toml
.github/workflows/: build-runtime.yml
reference/: README.md  lattice_matching_02032026.py
runtime/: Dockerfile  Dockerfile.full  README.md
spike/: M0_dataflow.md  M0_dedup.md  M0_docker.md  M0_pydantic_numpy.md  m0_bench.py  m0_bench_results.json
src/moire_flow/: __init__.py  cli.py
src/moire_flow/boxes/: __init__.py  atom_assembler.py  base.py  bilayer_splitter.py  lammps_input_writer.py  lattice_matcher.py  lattice_transformer.py  md_supercell_builder.py  potential_assigner.py  structure_loader.py  validator.py
src/moire_flow/constants/: __init__.py  potentials.py
src/moire_flow/core/: __init__.py  algebra2d.py  matching.py  types.py  validation_metrics.py
src/moire_flow/engine/: __init__.py  runner.py  spec.py
src/moire_flow/io/: __init__.py  _mass.py  cif.py  lammps_data.py  lammps_writer.py  xyz.py
src/moire_flow/supports/: __init__.py  lammps_executor.py  materials_db.py  trajectory_analyzer.py
tests/: conftest.py  test_algebra2d.py  test_atom_assembler.py  test_bilayer_splitter.py  test_box_contract.py  test_cli.py  test_engine.py  test_lammps_e2e.py  test_lammps_input_writer.py  test_lattice_matcher.py  test_lattice_transformer.py  test_matching.py  test_md_supercell_builder.py  test_mlip_pair_styles.py  test_potential_assigner.py  test_regression_matcher.py  test_regression_vs_reference.py  test_structure_loader.py  test_supports.py  test_types_roundtrip.py  test_validator.py  test_web_backend.py
web/: README.md
web/backend/: __init__.py  server.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
web/frontend/src/: App.tsx  index.css
web/frontend/src/components/: BoxNode.tsx  Canvas.tsx  Inspector.tsx  Sidebar.tsx  (+1 more)
(+3 files in other folders)
