[project]
name = "moire-flow"
version = "0.1.0"
description = "Modular workflow engine for moire lattice matching and molecular dynamics setup"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Camilo Chacon Sartori", email = "camilochs@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["moire", "lattice-matching", "molecular-dynamics", "lammps", "icn2", "materials-science"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pydantic>=2.7",
    "numpydantic>=1.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "ase>=3.23",
    "typer>=0.12",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]

[project.scripts]
moire-flow = "moire_flow.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moire_flow"]

[tool.hatch.build.targets.sdist]
exclude = ["reference", "spike", "web", "runtime", "tests", "examples"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["reference", "spike"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/moire_flow/core", "src/moire_flow/boxes"]

[[tool.mypy.overrides]]
module = ["ase.*", "scipy.*", "numpydantic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
